FEAT: Bill Owner endpoint
